--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.722.0",
+    "@aws-sdk/s3-presigned-post": "^3.722.0",
     "@dnd-kit/core": "^6.3.1",
     "@libsql/client": "^0.14.0",
     "drizzle-orm": "^0.38.3",
@@ -19,7 +21,8 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
