--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
     "tldraw": "^3.7.2",
     "uuid": "^11.0.3",
     "zod": "^3.24.1",
